@@ -58,14 +58,20 @@ Please <a href="mailto:vegastrike-users@lists.sourceforge.net">tell us</a> if th
 <p>
 we especially need feedback on the linux binary
 <p>
-See our <a href="installing.html">Installation Page</a> for details about installation.
+See our <a href="player_tutorial/installing.html">Installation Page</a> for details about installation.
 <p>
 Visit also our brandnew
  <a href="player_tutorial/index.html">Player Documentation</a>
- and our <a href="playing.html">Quick Playing Guide</a>
+ and our <a href="player_tutorial/playing.html">Quick Playing Guide</a>
 <p>
+ <p>
+Download our Documentation:
+
+<P><FONT FACE="Arial"><FONT COLOR="#FFFFFF"><FONT SIZE=-1>&nbsp;&nbsp;
+<A HREF="vegastrike-0.2.0-doc.tar.gz">Vegastrike 0.2.0 Documentation/Player Guide</A> (including screenshots)</FONT></FONT></FONT>
 
 <BR>
+<p>
 
 <P><FONT FACE="Arial"><FONT COLOR="#FFFFFF"><FONT SIZE=-1>&nbsp;&nbsp;
 <A HREF="http://sourceforge.net/cvs/?group_id=19507">Browse the CVS Tree</A> 0 KB</FONT></FONT></FONT>
