@@ -2,7 +2,7 @@
 
 <HTML>
 <HEAD>
-	<TITLE>Vega Strike</TITLE>
+        <TITLE>Vega Strike</TITLE>
 </HEAD>
 <BODY  bgcolor="#000000" text="#C0C0C0" link="#00BB5E" vlink="#008040" alink="#00FF00" STYLE="margin-top: 0px; margin-left: 0px;" marginheight=0 marginwidth=0>
 <table width="700"><tr><td align="left">
@@ -38,7 +38,10 @@ d.images?r=d.im.width:z=0;pr("z")//-->
 height=1 width=1></noscript>
 <br><A HREF = "pics/NovaSol.jpg"><img SRC="pics/NovaSol-sml.jpg" BORDER=0 height=158 width=243></A><A HREF = "pics/voidspace.gif"><img SRC="pics/voidspace.jpg" BORDER=0 height=158 width=243></A>
 <br><a href="main.html">Info</a> || <a href="pics.html">Screen Shots</a>
-|| <a href="download.html">Download</a> || <a href="http://sourceforge.net/projects/vegastrike/">SourceforgeProject</a> || <a href = "http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/vegastrike/vegastrike/src/">Working Logs</a> || <A HREF="http://lists.sourceforge.net/mailman/listinfo/vegastrike-users">Mailing List</a> || <a href="credits.html">Credits</a> || <a href="email.html">E-mail</a>|| <a href="http://hkn.eecs.berkeley.edu/~ashieh/184/">CS 184 Project</a></center> 
+|| <a href="download.html">Download</a>
+ || <a href="player_tutorial/installing.html">Install Instructions</a>
+ || <a href="player_tutorial/index.html">Player Guide</a>
+ || <a href="http://sourceforge.net/projects/vegastrike/">SourceforgeProject</a> || <a href = "http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/vegastrike/vegastrike/src/">Working Logs</a> || <A HREF="http://lists.sourceforge.net/mailman/listinfo/vegastrike-users">Mailing List</a> || <a href="credits.html">Credits</a> || <a href="email.html">E-mail</a>|| <a href="http://hkn.eecs.berkeley.edu/~ashieh/184/">CS 184 Project</a></center>
 
 <table WIDTH="100%" >
 <tr>
