@@ -22,7 +22,10 @@ you could do for me :-)
 <br>&nbsp;
 <ul>
 <li>
-<a href="../playing.html">Quick and simple playing info</a></li>
+<a href="installing.html">Installing</a></li>
+
+<li>
+<a href="playing.html">Quick and simple playing info</a></li>
 
 <li>
 <a href="cockpit.html">The cockpit - the HUD - the VUD - the views</a></li>
@@ -72,13 +75,9 @@ The <a href="mission_selector.html">Mission Selector</a></li>
 
 <li>
 Playable Missions</li>
-
-<li>
-</li>
 </ul>
 
-<br>&nbsp;
-<p>
+<p><br>
 <hr WIDTH="100%">
 <p>please send feedback to <a href="mailto:vegastrike-users@lists.sourceforge.net">vegastrike-users@lists.sourceforge.net</a>
 and tell us what you think :-)
